uniform snippets across rest, node, python in test data page

--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -37,7 +37,7 @@ curl --request POST \
      --header 'Accept: application/json' \
      --header 'Content-Type: application/json' \
      --header 'x-vital-api-key: <your_api_key>' \
-     --data '{"user_id": "150db84c-537c-4cad-a6e9-24dc589d7fa2", "provider": "fitbit"}'
+     --data '{"user_id": "<user_id>", "provider": "<provider>"}'
 ```
 
 ```js Node
