add support@tryvital.io in contact us note

--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -12,7 +12,7 @@ This feature is currently available for the following providers:
 * Whoop
 
 The others will be coming soon. If there is a particular provider you would like us to add
-please do not hesitate to contact us!
+please do not hesitate to contact us at support@tryvital.io!
 </Note>
 
 When integrating with Vital, you may not own a physical device for each provider you're planning to support. For this, we provide demo users with test data so you can build and test the whole integration without touching a real device.
