test data page - put providers under development

--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -4,7 +4,7 @@ description: "Using demo users to build and test your Vital integration"
 ---
 
 <Note>
-This feature is currently available for the following providers:
+This feature is currently under development for the following providers:
 
 * Apple Health Kit
 * Fitbit
