--- a/docs/webhooks/data_flow.mdx
+++ b/docs/webhooks/data_flow.mdx
@@ -80,14 +80,26 @@ Once a connection between a provider and a user is established, we will send a w
 ## Deep Dive into Vital Webhooks
 
 <Example resizeable>
-  <div style="position: relative; padding-bottom: 64.98194945848375%; height: 0;">
+  <div
+    style={{
+      position: "relative",
+      paddingBottom: "64.98194945848375%",
+      height: 0,
+    }}
+  >
     <iframe
       src="https://cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.loom.com%2Fembed%2F0121d272e21b44049dd4d418302580a5&display_name=Loom&url=https%3A%2F%2Fwww.loom.com%2Fshare%2F0121d272e21b44049dd4d418302580a5&image=https%3A%2F%2Fcdn.loom.com%2Fsessions%2Fthumbnails%2F0121d272e21b44049dd4d418302580a5-00001.gif&key=f2aa6fc3595946d0afc3d76cbbd25dc3&type=text%2Fhtml&schema=loom"
       frameborder="0"
       webkitallowfullscreen
       mozallowfullscreen
       allowfullscreen
-      style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+      style={{
+        position: "absolute",
+        top: 0,
+        left: 0,
+        width: "100%",
+        height: "100%",
+      }}
     ></iframe>
   </div>
 </Example>
