--- a/docs/wearables/providers/freestyle.mdx
+++ b/docs/wearables/providers/freestyle.mdx
@@ -66,7 +66,7 @@ const { link_token } = await client.Link.create(userId);
 
 </SnippetGroup>
 
-2. Libre is an [_email_](../../vital-link/customization#email) provider.
+2. Libre is an [_email_](wearables/vital-link/customization#email) provider.
    This means that when connecting a user we have to use
    the connect email provider method, passing in the email of the user's Libre account and region in short form.
 
