--- a/docs/wearables/providers/freestyle.mdx
+++ b/docs/wearables/providers/freestyle.mdx
@@ -35,7 +35,7 @@ either via the **widget** or the **API**.
 
 ## Vital Widget
 
-To connect your user to Vital via the Widget you can follow the guide [here](../../vital-link/launching_link).
+To connect your user to Vital via the Widget you can follow the guide [here](wearables/vital-link/launching_link).
 
 <img src="../../img/libre_connect.png" className="w-2/5 block mx-auto" />
 
