create .env annd add VITAL_REGION
- Create .env instead of copy from .env.example (it does not exists)
- Add VITAL_REGION to run backend

--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -37,9 +37,9 @@ customizing the `.env` file with your own Vital `API_KEY` and finally, building 
 git clone https://github.com/tryVital/quickstart.git
 cd backend/python
 
-# Copy the .env.example file to .env, then fill
-# out VITAL_API_KEY and VITAL_ENV in .env
-cp .env.example .env
+# Create .env, then fill
+# out VITAL_API_KEY, VITAL_REGION (eu, us) and VITAL_ENV in .env
+touch .env
 
 # Note: must use python 3
 # For virtualenv users:
