fill out frontend vars with right values

--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -58,6 +58,9 @@ Open a new shell and start the frontend app. Your app will be running at `http:/
 cd quickstart/frontend
 npm install
 
+# Open .env.local, then fill
+# out NEXT_PUBLIC_VITAL_API_KEY, NEXT_PUBLIC_VITAL_ENV and NEXT_PUBLIC_VITAL_REGION
+
 # Start the frontend app
 npm dev
 
