fix frontend run command

--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -62,7 +62,7 @@ npm install
 # out NEXT_PUBLIC_VITAL_API_KEY, NEXT_PUBLIC_VITAL_ENV and NEXT_PUBLIC_VITAL_REGION
 
 # Start the frontend app
-npm dev
+npm run dev
 
 # Go to http://localhost:3000
 ```
