--- a/docs/lab/home/testing-modalities.mdx
+++ b/docs/lab/home/testing-modalities.mdx
@@ -31,8 +31,8 @@ At home testing kits are comprised of a number of components such as:
 Additional components can be included in the test kit box, to fully customize the kit, just contact us support@tryvital.io.
 
   </div>
-  <img src="../../img/wyndly.png" className="w-1/2 h-1/2" />
-</div> 
+  <img src="/img/wyndly.png" className="w-1/2 h-1/2" />
+</div>
 
 ## In lab phlebotomy
 
