--- a/docs/lab/results/result-formats.mdx
+++ b/docs/lab/results/result-formats.mdx
@@ -22,7 +22,7 @@ curl --request GET \
 
 An example result:
 
-<img src="../../img/test_result.jpg" className="w-2/3 h-2/3" />
+<img src="/img/test_result.jpg" className="w-2/3 h-2/3" />
 
 ## JSON Results
 
