--- a/docs/wearables/vital-link/launching_link.mdx
+++ b/docs/wearables/vital-link/launching_link.mdx
@@ -110,4 +110,4 @@ ReactDOM.render(<App />, document.getElementById('root'));
 
 3. This will launch the Vital Link widget, where your user can connect their account to Vital.
 
-<img src="../../img/link_specific.png" width={"60%"} />{" "}
+<img src="/img/link_specific.png" width={"60%"} />{" "}
