--- a/docs/webhooks/debugging.mdx
+++ b/docs/webhooks/debugging.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Debugging'
+title: "Debugging"
 ---
 
 You can debug webhook events in one of two ways: the Dashboard or using the Svix API.
@@ -9,7 +9,7 @@ You can debug webhook events in one of two ways: the Dashboard or using the Svix
 The Vital [Dashboard](https://app.tryvital.io)
 has a Webhooks section that allows you to test and observe webhook events.
 
-<img src={"../img/webhook_logs.png"} width={"100%"} />
+<img src={"/img/webhook_logs.png"} width={"100%"} />
 
 ### [Svix API](https://api.svix.com/docs)
 
