--- a/docs/welcome/privacy.mdx
+++ b/docs/welcome/privacy.mdx
@@ -14,7 +14,8 @@ To do this we've taken a number of precautions:
 ### Storing Data
 
 When we pull data from various wearable provider's this data goes through the Evervault encryption proxy - which encrypts the data before we store it.
-<imf src="../img/storing.png" alt="storing" /> 
+
+<imf src="/img/storing.png" alt="storing" />{" "}
 
 ### Retrieving Data
 
