--- a/docs/welcome/quickstart.mdx
+++ b/docs/welcome/quickstart.mdx
@@ -79,7 +79,7 @@ Personally identifiable information (PII), such as an email address or phone num
 
 Enter a new `client_user_id` and tap Create:
 
-<img src="../img/quickstart.jpg" alt="quickstart" />{" "}
+<img src="/img/quickstart.jpg" alt="quickstart" />{" "}
 
 This can also be achieved via the API as follows.
 
@@ -222,7 +222,7 @@ export const LinkButton: React.FC<{ userID: string | null }> = ({ userID }) => {
 
 This is what your users see to connect their medical device or wearables:
 
-<img src="../img/link_specific.png" width="75%" alt="Link specific" />
+<img src="/img/link_specific.png" width="75%" alt="Link specific" />
 
 ## 5. Making your first API request
 
