--- a/docs/wearables/providers/guides/freestyle.mdx
+++ b/docs/wearables/providers/guides/freestyle.mdx
@@ -28,7 +28,7 @@ of each user and adjust the timestamps accordingly.
 Once your Freestyle practice is connected to the Vital practice, you need to instruct your user's to connect their Libre account to your practice.
 This allows Vital to start pulling data from their account. This can be through the Libre app.
 
-<img src="../../img/connect_libreview.png" className="w-2/5 block mx-auto" />
+<img src="/img/connect_libreview.png" className="w-2/5 block mx-auto" />
 
 Once your user has connected their Libre account, you can connect your user to Vital
 either via the **widget** or the **API**.
@@ -37,7 +37,7 @@ either via the **widget** or the **API**.
 
 To connect your user to Vital via the Widget you can follow the guide [here](/wearables/vital-link/launching_link).
 
-<img src="../../img/libre_connect.png" className="w-2/5 block mx-auto" />
+<img src="/img/libre_connect.png" className="w-2/5 block mx-auto" />
 
 Note, Freestyle Libre is available in different regions, ensure you select the correct region in the list of options above. Here are the regions that are available for Freestyle in each Vital region:
 
