--- a/docs/wearables/providers/test_data.mdx
+++ b/docs/wearables/providers/test_data.mdx
@@ -6,13 +6,14 @@ description: "Using demo users to build and test your Vital integration"
 <Note>
 This feature is currently under development for the following providers:
 
-* Apple Health Kit
-* Fitbit
-* Oura
-* Whoop
+- Apple Health Kit
+- Fitbit
+- Oura
+- Whoop
 
 The others will be coming soon. If there is a particular provider you would like us to add
 please do not hesitate to contact us at support@tryvital.io!
+
 </Note>
 
 When integrating with Vital, you may not own a physical device for each provider you're planning to support. For this, we provide demo users with test data so you can build and test the whole integration without touching a real device.
@@ -25,7 +26,7 @@ First, you need a Vital user. You can create one either through the [dashboard](
 
 After creating the user, the `Users` page of your dashboard will look like this:
 
-<img src="../../img/test_data_dashboard_before_connection.png" width={"100%"} />
+<img src="/img/test_data_dashboard_before_connection.png" width={"100%"} />
 
 Now you can create a demo connection for the Vital user you just created, in this case `150db84c-537c-4cad-a6e9-24dc589d7fa2`. You can directly hit the [API endpoint](/api-reference/link/link-demo-provider) or using one of our client libraries, as shown below:
 
@@ -68,11 +69,11 @@ response = client.Link.demo_provider(user_id, provider)
 
 After the demo connection is created, a Fitbit logo will appear beside your user.
 
-<img src="../../img/test_data_dashboard_after_connection.png" width={"100%"} />
+<img src="/img/test_data_dashboard_after_connection.png" width={"100%"} />
 
 From here, everything works exactly the same as if you connected a real device. This means you will receive the following webhook updates:
 
-* [Connection created](/webhooks/data_flow#connection-created), as soon as the connection is created.
-* [Historical webhooks](/webhooks/data_flow#historical-data-flow). We simulate historical data for the demo device and send the corresponding webhook updates, as in the real-world scenario.
-* [Daily webhooks](/webhooks/data_flow#daily-data-flow). We also simulate updates to the device data every couple of hours so you can test receiving the data when a user recorded a workout or other activity.
-* [Refresh user data](/api-reference/user/refresh-user-data). You can also instantaneously refresh a user's data through this endpoint.
+- [Connection created](/webhooks/data_flow#connection-created), as soon as the connection is created.
+- [Historical webhooks](/webhooks/data_flow#historical-data-flow). We simulate historical data for the demo device and send the corresponding webhook updates, as in the real-world scenario.
+- [Daily webhooks](/webhooks/data_flow#daily-data-flow). We also simulate updates to the device data every couple of hours so you can test receiving the data when a user recorded a workout or other activity.
+- [Refresh user data](/api-reference/user/refresh-user-data). You can also instantaneously refresh a user's data through this endpoint.
