--- a/docs/wearables/providers/freestyle.mdx
+++ b/docs/wearables/providers/freestyle.mdx
@@ -6,13 +6,6 @@ title: "Freestyle Guide"
 
 Please make sure you invite Vital to your practice as a clinician with admin rights. To connect a user to Vital you must first connect your Freestyle practice to Vital in the appropriate Vital region for your Freestyle account (See [here](#vital-freestyle-supported-regions) for a breakdown or vital regions and supported Freestyle regions).
 
-Vital has two practices (depending on environment):
-
-| Environment |                  |
-| ----------- | ---------------- |
-| Sandbox     | tryVital-sandbox |
-| Production  | tryVital         |
-
 If you get stuck at any point, help is just a click away! Join our Slack channel or send us a message to support@tryvital.io
 
 </Info>
@@ -48,7 +41,18 @@ Note, Freestyle Libre is available in different regions, ensure you select the c
 | United States (`us`)                           | United States (`us`) \* |
 | Europe (`eu`)                                  | Europe (`eu`) \*        |
 |                                                | Singapore (`sg`)        |
-| _(\*) Default Freestyle region if unspecified_ |
+|                                                | Australia (`au`)        |
+|                                                | Germany (`de`)          |
+| _(\*) Default Freestyle region if unspecified_ |                         |
+
+
+Vital has two practices (depending on environment) this applies to all regions:
+
+| Environment |                  |
+| ----------- | ---------------- |
+| Sandbox     | tryVital-sandbox |
+| Production  | tryVital         |
+
 
 ## Vital Link
 
