--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -27,6 +27,8 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `freestyle_libre_ble` | Abbott CGM Glucose monitor readings via SDK                   |
 | [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                                       |
 | [Hammerhead](https://www.hammerhead.io)                              | `hammerhead`          | Cycling computers                                             |
+| [Dexcom](https://www.dexcom.com)                                     | `dexcom`              | Dexcom CGM Glucose monitors                                   |
+| [MyfitnessPal](https://www.myfitnesspal.com)                         | `my_fitness_pal`      | Nutrition data                                                |
 
 ## Providers under active development
 
@@ -36,7 +38,6 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 | Provider                                        | Slug             | Description               | Stage   |
 | ----------------------------------------------- | ---------------- | ------------------------- | ------- |
-| [MyfitnessPal](https://www.myfitnesspal.com)    | `my_fitness_pal` | Nutrition data            | Enquire |
 | [Xiaomi](https://www.xiaomi.com)                | `xiaomi`         | All data                  | Enquire |
 | [Cronometer](https://www.cronometer.com)        | `cronometer`     | Nutrition data            | Enquire |
 | [Suunto](https://www.suunto.com)                | `suunto`         | Fitness Watch             | Planned |
@@ -87,6 +88,8 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Zwift](https://zwift.com)                                      | Polling     |
 | [8Sleep](https://www.eightsleep.com)                            | Polling     |
 | [Hammerhead](https://www.hammerhead.io)                         | Polling     |
+| [Dexcom](https://www.dexcom.com)                                | Polling     |
+| [MyfitnessPal](https://www.myfitnesspal.com)                    | Polling     |
 
 <Info>
 
