update openapi and add new providers

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -28,11 +28,14 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Braun Healthcare](https://www.braunhealthcare.com)                  | `braun`               | Blood Pressure Monitors                                       |
 | [Hammerhead](https://www.hammerhead.io)                              | `hammerhead`          | Cycling computers                                             |
 | [Dexcom](https://www.dexcom.com)                                     | `dexcom`              | Dexcom CGM Glucose monitors                                   |
-| [MyfitnessPal](https://www.myfitnesspal.com)                         | `my_fitness_pal`      | Nutrition data                                                |
 
 ## Providers under active development
 
 **Beta**: Currently under development
+
+| Provider                                     | Slug              | Description    |
+| -------------------------------------------- | ----------------- | -------------- |
+| [MyfitnessPal](https://www.myfitnesspal.com) | `my_fitness_pal`  | Nutrition data |
 
 **Planned**: On our roadmap
 
