--- a/docs/wearables/providers/resources.mdx
+++ b/docs/wearables/providers/resources.mdx
@@ -12,6 +12,7 @@ At Vital, a resource represents a set of fields. Each resource is an abstraction
 | `Body`           | summary    |
 | `Workouts`       | summary    |
 | `Sleep`          | summary    |
+| `Meal`           | summary    |
 | `Profile`        | summary    |
 | `Glucose`        | timeseries |
 | `Heartrate`      | timeseries |
