--- a/docs/wearables/vital-link/customization.mdx
+++ b/docs/wearables/vital-link/customization.mdx
@@ -11,7 +11,7 @@ To authenticate without Vital link, you need to first generate a `link_token` fo
 token = client.Link.create(user_id)
 ```
 
-```js
+```javascript
 const resp = await client.Link.create(client_user_id);
 ```
 
