--- a/docs/wearables/providers/guides/dexcom.mdx
+++ b/docs/wearables/providers/guides/dexcom.mdx
@@ -21,19 +21,24 @@ To connect your device with the *widget*, follow the link wizard ensuring and en
 You can also connect a Dexcom user to vital using vital client. For additional information please consult the API reference.
 
 <SnippetGroup>
+
 ```python
 link_token = client.Link.create(user_id)
-client.Link.password_provider(link_token, "dexcom", username, password)
+client.Link.password_provider(
+    link_token, "dexcom", username, password
+)
 ```
 
-```js
+```javascript
 const { link_token } = await client.Link.create(user_id);
-await client.Link.password_provider(link_token, "dexcom", username, password);
+await client.Link.password_provider(
+    link_token, "dexcom", username, password
+);
 ```
 </SnippetGroup>
 
 ## Webhooks
 
-On successful connection, you will recieve a `provider.connection.created` wehbook. As is with most parts of Vital, webhooks for `data.daily.glucose.created`, `data.daily.glucose.updated`, are available sent to your team's servers when new data is available during the day.
+On successful connection, you will recieve a [Connection create](/webhooks/data_flow#connection-created) wehbook. [Daily webhooks](/webhooks/data_flow#daily-data-flow) `data.daily.glucose.created` and `data.daily.glucose.updated` will also be issued to your team as new or more up-to-date data becomes available during the day.
 
-For this provider however, Vital will begin to aggregate the data for the last 24 hours and will not go beyond that. As a result, there will be no `historical.glucose.created` sent out. If you would like to pull the data immediately after connection, you can use the `user/refresh` endpoint.
+For this provider however, Vital will begin to aggregate the data for the last 24 hours and will not go beyond that. As a result, there will be no [Historical webhooks](/webhooks/data_flow#historical-data-flow) issued. If you would like to pull the data immediately after connection, you can use the `user/refresh` endpoint.
