add meal resource

--- a/docs/api-details/rate_limiting.mdx
+++ b/docs/api-details/rate_limiting.mdx
@@ -18,7 +18,7 @@ Rate limit errors will be triggered when the rate limit for a particular endpoin
 | `/timerseries/workouts/{workout_id}/stream`   | GET    | 60 per minute          |
 | `/timerseries/{user_id}/{resource:path}`      | GET    | 60 per minute          |
 | `/summary/profile/{user_id}`                  | GET    | 60 per minute          |
-| `/summary/profile/{user_id}/raw`             | GET    | 60 per minute          |
+| `/summary/profile/{user_id}/raw`              | GET    | 60 per minute          |
 | `/summary/devices/{user_id}/raw`              | GET    | 60 per minute          |
 | `/summary/activity/{user_id}/raw`             | GET    | 60 per minute          |
 | `/summary/workouts/{user_id}`                 | GET    | 60 per minute          |
@@ -26,6 +26,7 @@ Rate limit errors will be triggered when the rate limit for a particular endpoin
 | `/summary/sleep/{user_id}`                    | GET    | 60 per minute          |
 | `/summary/sleep/{user_id}/stream`             | GET    | 60 per minute          |
 | `/summary/sleep/{user_id}/raw`                | GET    | 60 per minute          |
+| `/summary/meal/{user_id}`                     | GET    | 60 per minute          |
 | `/summary/workouts/{user_id}/raw`             | GET    | 60 per minute          |
 | `/summary/body/{user_id}`                     | GET    | 60 per minute          |
 | `/summary/body/{user_id}/raw`                 | GET    | 60 per minute          |
