styling + openapi docs

--- a/docs/wearables/providers/guides/dexcom.mdx
+++ b/docs/wearables/providers/guides/dexcom.mdx
@@ -20,7 +20,7 @@ To connect your device with the *widget*, follow the link wizard ensuring and en
 
 You can also connect a Dexcom user to vital using vital client. For additional information please consult the API reference.
 
-<SnippetGroup>
+<CodeGroup>
 
 ```python
 link_token = client.Link.create(user_id)
@@ -35,7 +35,7 @@ await client.Link.password_provider(
     link_token, "dexcom", username, password
 );
 ```
-</SnippetGroup>
+</CodeGroup>
 
 ## Webhooks
 
