--- a/docs/api-reference/meal/get-summary.mdx
+++ b/docs/api-reference/meal/get-summary.mdx
@@ -77,7 +77,7 @@ curl --request GET \
 </ResponseExample>
 
 <Info>
-All values in the returned model are returned in the following units:
+All values in the returned model are supplied in the following units:
 </Info>
 
 - `meals[*].energy.value` in calories `kcal`
