--- a/docs/wearables/providers/guides/freestyle.mdx
+++ b/docs/wearables/providers/guides/freestyle.mdx
@@ -58,31 +58,31 @@ Vital has two practices (depending on environment) this applies to all regions:
 
 1. To connect to Freestyle Libre, you must create a Vital Link token.
 
-<SnippetGroup>
+<CodeGroup>
 
-```python
+```python Python
 link_token = client.Link.create(user_id)
 ```
 
-```javascript
+```javascript Python
 const { link_token } = await client.Link.create(userId);
 ```
 
-</SnippetGroup>
+</CodeGroup>
 
 2. Libre is an [_email_](wearables/vital-link/customization#email) provider.
    This means that when connecting a user we have to use
    the connect email provider method, passing in the email of the user's Libre account and region in short form.
 
-<SnippetGroup>
+<CodeGroup>
 
-```python
+```python Python
 client.Link.email_provider(
    link_token, "freestyle_libre", email, region
 )
 ```
 
-```javascript
+```javascript Python
 await client.Link.connectEmailProvider(
   link_token,
   "freestyle_libre",
@@ -91,6 +91,6 @@ await client.Link.connectEmailProvider(
 );
 ```
 
-</SnippetGroup>
+</CodeGroup>
 
 Once this is complete we will start syncing data from their [Libre account](/api-details/data_flow).
