--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -31,7 +31,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 ## Providers under active development
 
-**Beta**: Currently under development
+**Beta**: Currently under development. All providers here are available in sandbox and production, any feedback you have is greatly appreciated!
 
 | Provider                                     | Slug              | Description    |
 | -------------------------------------------- | ----------------- | -------------- |
