fix broken link in libre docs

--- a/docs/wearables/providers/guides/freestyle.mdx
+++ b/docs/wearables/providers/guides/freestyle.mdx
@@ -70,7 +70,7 @@ const { link_token } = await client.Link.create(userId);
 
 </CodeGroup>
 
-2. Libre is an [email](wearables/vital-link/customization#email) provider.
+2. Libre is an [email](api-refrence/link/link-email-provider) provider.
    This means that when connecting a user we have to use
    the connect email provider method, passing in the email of the user's Libre account and region in short form.
 
