chore: fix typo

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -35,7 +35,7 @@ We currently Support over 300+ devices, a full list can be seen below.
 
 | Provider                                     | Slug              | Description    |
 | -------------------------------------------- | ----------------- | -------------- |
-| [MyfitnessPal](https://www.myfitnesspal.com) | `my_fitness_pal`  | Nutrition data |
+| [MyFitnessPal](https://www.myfitnesspal.com) | `my_fitness_pal`  | Nutrition data |
 
 **Planned**: On our roadmap
 
@@ -92,7 +92,7 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [8Sleep](https://www.eightsleep.com)                            | Polling     |
 | [Hammerhead](https://www.hammerhead.io)                         | Polling     |
 | [Dexcom](https://www.dexcom.com)                                | Polling     |
-| [MyfitnessPal](https://www.myfitnesspal.com)                    | Polling     |
+| [MyFitnessPal](https://www.myfitnesspal.com)                    | Polling     |
 
 <Info>
 
