--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -4,7 +4,7 @@ title: "My Fitness Pal (Beta)"
 
 ## Connecting My Fitness Pal to Vital
 
-You can now link My Fitness Pal accounts to Vital! You can do this with Vital Link Widget or programatically like any other [password](/api-reference/link/link-email-provider).
+You can now link My Fitness Pal accounts to Vital! You can do this with Vital Link Widget or programatically like other [password](/api-reference/link/link-email-provider) providers.
 
 ## Vital Widget
 
@@ -15,11 +15,10 @@ To connect your device with the *widget*, follow the link wizard ensuring and en
     <img src="/img/my_fitness_pal_link_credentials.png" className="w-2/5 block mx-auto" />
 </Frame>
 
+
 <Info>
 This provider is in beta. Please be aware that linking is a little slower than other providers. We are working to improve this in subsequent releases.
 </Info>
-
-</CodeGroup>
 
 ## Webhooks
 
