--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -15,9 +15,10 @@ To connect your device with the *widget*, follow the link wizard ensuring and en
     <img src="/img/my_fitness_pal_link_credentials.png" className="w-2/5 block mx-auto" />
 </Frame>
 
+<br/>
 
 <Info>
-This provider is in beta. Please be aware that linking is a little slower than other providers. We are working to improve this in subsequent releases.
+This provider is in beta. Please be aware that linking may be slower than other providers. We are working to improve this in subsequent releases.
 </Info>
 
 ## Webhooks
