--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -23,7 +23,7 @@ This provider is in beta. Please be aware that linking may be slower than other 
 
 ## Webhooks
 
-On successful connection, you will recieve:
+On successful connection, you will receive:
 
 - [Connection create](/webhooks/data_flow#connection-created) wehbook.
 - [Historical Meals](/webhooks/data_flow#historical-data-flow) webhook, implying that the last *2 weeks* of data has been fetched successfully.
