Make sure this is clear

--- a/docs/wearables/providers/resources.mdx
+++ b/docs/wearables/providers/resources.mdx
@@ -140,7 +140,7 @@ Resources alone are not the whole story. Depending on the provider, a field migh
 
 <Note>
 
-Providers mark with `*` means that Vital calculates the field's value.
+Providers mark with `*` means that Vital calculates the field's value. In some cases, they might came as `null`, since we weren't able to make the calculation.
 
 </Note>
 
