--- a/docs/wearables/providers/guides/my_fitness_pal.mdx
+++ b/docs/wearables/providers/guides/my_fitness_pal.mdx
@@ -12,11 +12,11 @@ To connect your device with the _widget_, follow the link wizard ensuring and en
 
 <Frame>
   <img
-    src="/img/my_fitness_pal_link_search.png"
+    src="/img/my_fitness_pal_link_search.jpg"
     className="w-2/5 block mx-auto"
   />
   <img
-    src="/img/my_fitness_pal_link_credentials.png"
+    src="/img/my_fitness_pal_link_credentials.jpg"
     className="w-2/5 block mx-auto"
   />
 </Frame>
