--- a/docs/wearables/providers/guides/garmin.mdx
+++ b/docs/wearables/providers/guides/garmin.mdx
@@ -11,8 +11,11 @@ Vital! You can do this with Vital Link Widget or programatically like any other 
 To connect your device with the _widget_, follow the link wizard ensuring and enter your username and password.
 
 <Frame>
-  <img src="/img/garmin_link_search.jpg" className="w-4/5 block mx-auto" />
-  <img src="/img/garmin_connect.jpg" className="w-4/5 block mx-auto" />
+  <img
+    src="/img/garmin_link_search.jpg"
+    className="w-3/5 h-3/5 block mx-auto"
+  />
+  <img src="/img/garmin_connect.jpg" className="w-3/5 h-3/5 block mx-auto" />
 </Frame>
 
 <br />
