--- a/docs/wearables/providers/guides/garmin.mdx
+++ b/docs/wearables/providers/guides/garmin.mdx
@@ -22,7 +22,7 @@ To connect your device with the _widget_, follow the link wizard ensuring and en
 
 <Warning>
   This provider doesn't send historical webhooks. This is in constrast with
-  other providers we have. This means you will receive `daily.data.<resource_type>.created`.
+  other providers we have. This means you will receive `daily.data.<resource_type>.created` instead.
 </Warning>
 
 ## Webhooks
