--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -94,6 +94,39 @@ All data can be fetched instantaneously, some are configured via our live refres
 | [Dexcom](https://www.dexcom.com)                                | Polling     |
 | [MyFitnessPal](https://www.myfitnesspal.com)                    | Polling     |
 
+
+## Historical Days Retrieved'
+
+When a new provider is connected to a user, Vital retrieves the historical data for this user from the connected provider. The following number of historical days of data are retrieved for each provider. 
+
+
+| Provider                                                             | Historic Days         |
+| -------------------------------------------------------------------- | --------------------- |
+| [Freestyle](https://www.freestylelibre.co.uk/libre/)                 | `90`                  |
+| [Fitbit](https://www.fitbit.com/global/uk/home)                      | `90`                  |
+| [Garmin](https://www.garmin.com)                                     | `90`                  |
+| [Google Fit](https://www.google.com/fit/)                            | `90`                  |
+| [Oura](https://ouraring.com)                                         | `180`                 |
+| [Peloton](https://www.onepeloton.com)                                | `180`                 |
+| [Renpho](https://renpho.com)                                         | `180`                 |
+| [Strava](https://www.strava.com)                                     | `14`                  |
+| [Wahoo](https://wahoofitness.com)                                    | `180`                 |
+| [Whoop](https://www.whoop.com)                                       | `180`                 |
+| [Zwift](https://zwift.com)                                           | `270`                 |
+| [Withings](https://www.withings.com)                                 | `90`                  |
+| [iHealth](https://ihealthlabs.com)                                   | `7`                   |
+| [8Sleep](https://www.eightsleep.com)                                 | `90`                  |
+| [Omron](https://www.omron-healthcare.com) (SDK)                      | `90`                  |
+| [Contour](https://www.diabetes.ascensia.com) (SDK)                   | `90`                  |
+| [Accu-Chek](https://www.accu-chek.com) (SDK)                         | `90`                  |
+| [Apple HealthKit](https://www.apple.com/uk/ios/health/) (SDK)        | `90`                  |
+| [Freestyle Libre BLE](https://www.freestylelibre.co.uk/libre/) (SDK) | `90`                  |
+| [Braun Healthcare](https://www.braunhealthcare.com)                  | `90`                  |
+| [Hammerhead](https://www.hammerhead.io)                              | `30`                  |
+| [Dexcom](https://www.dexcom.com)                                     | `1`                   |
+| [MyFitnessPal](https://www.myfitnesspal.com)                         | `90`                  | 
+
+
 <Info>
 
 To provide you with the best possible experience, for some providers we implement a mix of Webhook and Polling for different resources. Check out the [resources page](https://docs.tryvital.io/wearables/providers/Resources) for more info.
